--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     </header>
 
     <!-- Липкая реклама казино -->
-    <div class="sticky-ad">
+     <a href="https://betboompass.com/tasks" target="_blank">Начать игру <div class="sticky-ad">
         <span class="fake-close">✕</span>
         <h3>Играйте в нашем казино!</h3>
         <p>Выиграйте до 1 000 000 рублей! Только сегодня!</p>
-        <a href="https://betboompass.com/tasks" target="_blank">Начать игру</a>
+     
     </div>
+          </a>
 
     <main class="container">
         <section>
